began restyling on index page

--- a/Website/Pages/index.html
+++ b/Website/Pages/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="..\CSS">
+    <link rel="stylesheet" href="..\CSS\styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <header>
@@ -12,8 +13,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -50,6 +51,7 @@
         </div>
     </nav>
 </header>
+
 <body>
 
     <title> Oracle of Eternals</title>
@@ -63,25 +65,27 @@
             experiment
             with the story making upfront but to remember the code </p>
     </main>
-    <section>
 
-        <article class="owner">
-            <h2>Owner</h2>
-            <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
-                learning
-                page
-                to get back on track
-            </p1>
-            <p2>you wont believe the levels of stress they went through to get created its like they were created out of
-                thin
-                air
-            </p2>
-        </article>
-        <div>
+
+    <article class="container">
+        <div class="owner">
             <img src="https://th.bing.com/th/id/R.a0cebb96b75d8314efa7758493301af5?rik=Kolvwgisa89pJw&riu=http%3a%2f%2f2static.fjcdn.com%2flarge%2fpictures%2f23%2f01%2f2301b3_5671661.jpg&ehk=roJtnTh3WSD3M86EFzb%2fpN86IkKUhR3jTx9KzZnXVLY%3d&risl=&pid=ImgRaw&r=0"
-                alt="randome author pic" style="width:200px;height:300px;float:left;margin-left:200px;">
+                alt="randome author pic">
         </div>
-    </section>
+        <h2>Owner</h2>
+        <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
+            learning
+            page
+            to get back on track
+        </p1>
+        <p2>you wont believe the levels of stress they went through to get created its like they were created out of
+            thin
+            air
+        </p2>
+
+    </article>
+
+
     <section>
         <img src="https://media.istockphoto.com/photos/main-street-running-through-small-ohio-town-aerial-picture-id1287538714?b=1&k=20&m=1287538714&s=170667a&w=0&h=UtwL2mdaKsBk40sSUGFVWCmqw99q4xWwQa2DayTqGPU="
             alt="picture of small town" style="width:400px;height:300px;margin-top: 50px;margin-left: 200px;">
@@ -92,14 +96,13 @@
                 for a dedicated sir gerk this would not exist</p2>
         </div>
     </section>
-    <footer>
-        <p>trademark G&E industries</p>
-        <p>founded 2022</p>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
-</head>
+<footer>
+    <p>trademark G&E industries</p>
+    <p>founded 2022</p>
+</footer>
 
 </html>
