--- a/Website/Pages/index.html
+++ b/Website/Pages/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="..\CSS">
+    <link rel="stylesheet" href="..\CSS\index.css">
     <link rel="stylesheet" href="..\CSS\styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -67,23 +67,24 @@
     </main>
 
 
-    <article class="container">
-        <div class="owner">
+    <container class="grid text-justify" style="--bs-columns: 4;">
+<div></div>
+        <div class="g-col-2">
             <img src="https://th.bing.com/th/id/R.a0cebb96b75d8314efa7758493301af5?rik=Kolvwgisa89pJw&riu=http%3a%2f%2f2static.fjcdn.com%2flarge%2fpictures%2f23%2f01%2f2301b3_5671661.jpg&ehk=roJtnTh3WSD3M86EFzb%2fpN86IkKUhR3jTx9KzZnXVLY%3d&risl=&pid=ImgRaw&r=0"
-                alt="randome author pic">
+                alt="randome author pic" class="owner">
         </div>
         <h2>Owner</h2>
-        <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
-            learning
-            page
-            to get back on track
-        </p1>
-        <p2>you wont believe the levels of stress they went through to get created its like they were created out of
-            thin
-            air
-        </p2>
+        <div class="g-col-2">
+            <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
+                learning page to get back on track you wont believe the levels of stress they went through to get
+                created
+                its like they were created out of
+                thin
+                air
+            </p1>
+        </div>
 
-    </article>
+    </container>
 
 
     <section>
