still working to get he right design

--- a/Website/Pages/index.html
+++ b/Website/Pages/index.html
@@ -67,24 +67,23 @@
     </main>
 
 
-    <container class="grid text-justify" style="--bs-columns: 4;">
-<div></div>
-        <div class="g-col-2">
-            <img src="https://th.bing.com/th/id/R.a0cebb96b75d8314efa7758493301af5?rik=Kolvwgisa89pJw&riu=http%3a%2f%2f2static.fjcdn.com%2flarge%2fpictures%2f23%2f01%2f2301b3_5671661.jpg&ehk=roJtnTh3WSD3M86EFzb%2fpN86IkKUhR3jTx9KzZnXVLY%3d&risl=&pid=ImgRaw&r=0"
-                alt="randome author pic" class="owner">
-        </div>
-        <h2>Owner</h2>
-        <div class="g-col-2">
-            <p1>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
+    <section>
+
+
+        <img src="https://th.bing.com/th/id/R.a0cebb96b75d8314efa7758493301af5?rik=Kolvwgisa89pJw&riu=http%3a%2f%2f2static.fjcdn.com%2flarge%2fpictures%2f23%2f01%2f2301b3_5671661.jpg&ehk=roJtnTh3WSD3M86EFzb%2fpN86IkKUhR3jTx9KzZnXVLY%3d&risl=&pid=ImgRaw&r=0"
+            alt="randome author pic" class="owner">
+        <div class="about">
+            <h2>Owner</h2>
+            <p>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
                 learning page to get back on track you wont believe the levels of stress they went through to get
                 created
                 its like they were created out of
                 thin
                 air
-            </p1>
-        </div>
+            </p>
 
-    </container>
+        </div>
+    </section>
 
 
     <section>
