fixed design of index/home page

--- a/Website/Pages/index.html
+++ b/Website/Pages/index.html
@@ -72,7 +72,7 @@
 
         <img src="https://th.bing.com/th/id/R.a0cebb96b75d8314efa7758493301af5?rik=Kolvwgisa89pJw&riu=http%3a%2f%2f2static.fjcdn.com%2flarge%2fpictures%2f23%2f01%2f2301b3_5671661.jpg&ehk=roJtnTh3WSD3M86EFzb%2fpN86IkKUhR3jTx9KzZnXVLY%3d&risl=&pid=ImgRaw&r=0"
             alt="randome author pic" class="owner">
-        <div class="about">
+        <div class="ownerdesc">
             <h2>Owner</h2>
             <p>this is the owner they did ownery stuff to get wher ethey are and created for the purpose of this
                 learning page to get back on track you wont believe the levels of stress they went through to get
@@ -86,14 +86,14 @@
     </section>
 
 
-    <section>
+    <section class="aboutsec">
         <img src="https://media.istockphoto.com/photos/main-street-running-through-small-ohio-town-aerial-picture-id1287538714?b=1&k=20&m=1287538714&s=170667a&w=0&h=UtwL2mdaKsBk40sSUGFVWCmqw99q4xWwQa2DayTqGPU="
-            alt="picture of small town" style="width:400px;height:300px;margin-top: 50px;margin-left: 200px;">
+            alt="picture of small town" class="aboutpic">
         <div class="about">
-            <h4>About</h4>
-            <p2>the company was built in the instance of its required pressence on the seat of a firm gym workbench if
+            <h2>About</h4>
+            <p>the company was built in the instance of its required pressence on the seat of a firm gym workbench if
                 naught
-                for a dedicated sir gerk this would not exist</p2>
+                for a dedicated sir gerk this would not exist</p>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
