--- a/Website/Pages/services.html
+++ b/Website/Pages/services.html
@@ -58,45 +58,45 @@
 <body>
     <h1>What can we do for you?</h1>
     <section class="sinput">
-        <div class="dcheck">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Do you require help?
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                <label class="form-check-label" for="flexCheckChecked">
-                    In US Currency?
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                <label class="form-check-label" for="flexCheckChecked">
-                    Are you willing to pay money
-                </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                <label class="form-check-label" for="flexCheckDefault">
-                    In US currency?
-                </label>
+        <div>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                Do you require help?
+            </label>
+        </div>
+        <div>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                In US Currency?
+            </label>
+        </div>
+        <div>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                Are you willing to pay money
+            </label>
+        </div>
+        <div>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                In US currency?
+            </label>
 
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                <label class="form-check-label" for="flexCheckChecked">
-                    Willing to wait?
-                </label>
-            </div>
-            <div class="mb-3">
-                <textarea class="form-control" id="FormControlTextarea1" rows="3"
-                    placeholder="Tell us a bit more in detail"></textarea>
-            </div>
         </div>
-        <button type="button" class="btn btn-primary">Submit</button>
+        <div>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                Willing to wait?
+            </label>
         </div>
+        <div class="tinput">
+            <textarea class="form-control" id="FormControlTextarea1" rows="3"
+                placeholder="Tell us a bit more in detail"></textarea>
+        </div>
+        <div>
+            <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
